--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WJ8GK8VNS9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-WJ8GK8VNS9');
+</script>
 </head>
 <body>
     <header>API&M Unit-02</header>
@@ -689,3 +697,4 @@ public class Main {
     </script>
 </body>
 </html>
+
