--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ public class A {
   }
 }</pre>
             <div class="code-label">Main.java</div>
-<pre>//import modules
+<pre>
 @SpringBootApplication
 public class Main {
   public static void main(String[] args) {
@@ -333,7 +333,7 @@ public class B {
    }
 }</pre>
             <div class="code-label">Main.java</div>
-<pre>//import modules
+<pre>
 @SpringBootApplication
 public class Main {
    public static void main(String[] args) {
@@ -510,7 +510,7 @@ public class A
             </li>
             <li>Program:</li>
             <div class="code-label">A.java</div>
-<pre>//import modules
+<pre>
 @RestController
 @RequestMapping("/request")
 public class A
@@ -547,7 +547,7 @@ public class A
   }
 }</pre>
             <div class="code-label">Main.java</div>
-<pre>//import modules
+<pre>
 @SpringBootApplication
 public class Main {
   public static void main(String[] args) {
@@ -600,7 +600,7 @@ public class Main {
                 </ul>
             </li>
             <div class="code-label">A.java</div>
-<pre>//import modules
+<pre>
 @Aspect
 @Component
 Public class A
@@ -630,7 +630,7 @@ Public class A
   }
 }</pre>
             <div class="code-label">Main.java</div>
-<pre>//import modules
+<pre>
 @SpringBootApplication
 public class Main {
   public static void main(String[] args) {
@@ -697,4 +697,5 @@ public class Main {
     </script>
 </body>
 </html>
+
 
